fix-search-overflow

--- a/src/app/feed/user-info-box/user-info-box.component.scss
+++ b/src/app/feed/user-info-box/user-info-box.component.scss
@@ -3,12 +3,14 @@
 }
 
 .info-box {
-	-webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+	-webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16),
+		0 0 0 1px rgba(0, 0, 0, 0.08);
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
 	border-radius: 2px;
 	min-height: 420px;
 	width: 100%;
 	margin-bottom: 20px;
+	overflow: hidden;
 }
 
 .image-gallery {
@@ -23,7 +25,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-color: #1DA1F2;
+	background-color: #1da1f2;
 
 	img {
 		width: 100%;
@@ -35,7 +37,7 @@
 	position: absolute;
 	bottom: 0;
 	left: 50px;
-	background: #FFFFFF;
+	background: #ffffff;
 	height: 94px;
 	width: 94px;
 	img {
@@ -52,7 +54,7 @@
 .heading {
 	width: 100%;
 	padding: 15px;
-	border-bottom: 1px solid rgba(0,0,0,0.10);
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 
 	h2 {
 		margin: 0 0 10px 0;
@@ -105,7 +107,6 @@
 }
 
 .item-image {
-
 	display: flex;
 	justify-content: center;
 
@@ -142,16 +143,16 @@
 	margin: 0 auto;
 	width: 24px;
 	height: 24px;
-	border: 2px solid rgb(216,27,96);
-	border-top-color: rgba(216,97,96,0.2);
+	border: 2px solid rgb(216, 27, 96);
+	border-top-color: rgba(216, 97, 96, 0.2);
 	animation: spin 1s infinite linear;
 }
 
 @keyframes spin {
 	0% {
-	transform: rotate(0deg);
+		transform: rotate(0deg);
 	}
 	100% {
-	transform: rotate(360deg);
+		transform: rotate(360deg);
 	}
 }
